--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,8 +16,8 @@ jobs:
     - name: Build & Push Reverse Proxy Image to DockerHub
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker build -t henokhm/reverseproxy:v8 ./udagram-reverseproxy
-        docker push henokhm/reverseproxy:v8
+        docker build -t oxonebeing/reverseproxy:v1 ./udagram-reverseproxy
+        docker push oxonebeing/reverseproxy:v1
 
 
   second_job:
@@ -29,8 +29,8 @@ jobs:
     - name: Build & Push Backend User Service Image to DockerHub
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker build -t henokhm/udagram-api-user:v8 ./udagram-api-user
-        docker push henokhm/udagram-api-user:v8
+        docker build -t oxonebeing/udagram-api-user:v1 ./udagram-api-user
+        docker push oxonebeing/udagram-api-user:v1
 
 
   third_job:
@@ -42,8 +42,8 @@ jobs:
     - name: Build & Push Backend Feed Service Image to DockerHub
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker build -t henokhm/udagram-api-feed:v8 ./udagram-api-feed
-        docker push henokhm/udagram-api-feed:v8
+        docker build -t oxonebeing/udagram-api-feed:v1 ./udagram-api-feed
+        docker push oxonebeing/udagram-api-feed:v1
 
 
   forth_job:
@@ -55,5 +55,5 @@ jobs:
     - name: Build & Push Frontend Image to DockerHub
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker build -t henokhm/udagram-frontend:v8 ./udagram-frontend
-        docker push henokhm/udagram-frontend:v8
+        docker build -t oxonebeing/udagram-frontend:v1 ./udagram-frontend
+        docker push oxonebeing/udagram-frontend:v1
