Modified: '.gitignore' file by adding more environment variables.

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,10 @@ venv/
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Environment Variables (Secrets)
 set_env.sh
+admin-iam_-_credentials.csv
+aws_-_admin_user_credentials.csv
+ENVIRONMENT_VARIABLE.txt
+eks-cluster-role-trust-policy.json
